logs/dag_id=potential_customers_process/run_id=manual__2023-12-26T04:27:59.176887+00:00/task_id=create_table/attempt=1.log
[2023-12-26T04:28:00.099+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: potential_customers_process.create_table manual__2023-12-26T04:27:59.176887+00:00 [queued]>
[2023-12-26T04:28:00.105+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: potential_customers_process.create_table manual__2023-12-26T04:27:59.176887+00:00 [queued]>
[2023-12-26T04:28:00.106+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2023-12-26T04:28:00.106+0000] {taskinstance.py:1363} INFO - Starting attempt 1 of 1
[2023-12-26T04:28:00.106+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2023-12-26T04:28:00.114+0000] {taskinstance.py:1383} INFO - Executing <Task(PostgresOperator): create_table> on 2023-12-26 04:27:59.176887+00:00
[2023-12-26T04:28:00.119+0000] {standard_task_runner.py:55} INFO - Started process 27213 to run task
[2023-12-26T04:28:00.122+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'potential_customers_process', 'create_table', 'manual__2023-12-26T04:27:59.176887+00:00', '--job-id', '82', '--raw', '--subdir', 'DAGS_FOLDER/potential_customers_process.py', '--cfg-path', '/tmp/tmpzqk0arbg']
[2023-12-26T04:28:00.124+0000] {standard_task_runner.py:83} INFO - Job 82: Subtask create_table
[2023-12-26T04:28:00.181+0000] {task_command.py:376} INFO - Running <TaskInstance: potential_customers_process.create_table manual__2023-12-26T04:27:59.176887+00:00 [running]> on host 2d20203c1be8
[2023-12-26T04:28:00.221+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=potential_customers_process
AIRFLOW_CTX_TASK_ID=create_table
AIRFLOW_CTX_EXECUTION_DATE=2023-12-26T04:27:59.176887+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-12-26T04:27:59.176887+00:00
[2023-12-26T04:28:00.227+0000] {base.py:71} INFO - Using connection ID 'postgres' for task execution.
[2023-12-26T04:28:00.230+0000] {sql.py:315} INFO - Running statement: 
            CREATE TABLE IF NOT EXISTS customers (
                fullname TEXT NOT NULL,
                country_code TEXT NOT NULL,
                gender TEXT NOT NULL,
                age INT NOT NULL,
            );
        , parameters: None
[2023-12-26T04:28:00.231+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 94, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 295, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 320, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 7:             );
                    ^

[2023-12-26T04:28:00.236+0000] {taskinstance.py:1406} INFO - Marking task as FAILED. dag_id=potential_customers_process, task_id=create_table, execution_date=20231226T042759, start_date=20231226T042800, end_date=20231226T042800
[2023-12-26T04:28:00.242+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 82 for task create_table (syntax error at or near ")"
LINE 7:             );
                    ^
; 27213)
[2023-12-26T04:28:00.258+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2023-12-26T04:28:00.277+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
